* Removed extra code (option -DFREE_SPACE_BAR for cmake). Assemblies with -DFREE_SPACE_BAR_C=ON work stably on all supported platforms.
* Added ability to configure connection via UPnP (used miniupnp).
* Removed the possibility to build with libupnp 1.6 .* (USE_LIBUPNP option).
* Added /luafile and /lua chat commands (see man-page or /help in chat).
* Added widget for ADL-search configuration.
*** eiskaltdcpp-gtk ***
* Added Gtk interface based on code of FreeDC++ and LinuxDC++.
* The interface is localized using gettext.
* Default icons for Gtk interface synchronized with default icons from Qt interface.
* Added widget for ADL-search configuration.
* Added ability to configure connection via UPnP (used miniupnp).
* Added /sh and /alias chat commands (see man-page or /help in chat).
* Added /luafile and /lua chat commands (see man-page or /help in chat).
*** eiskaltdcpp-wt ***
* Development has begun. Attention: the program is not yet ready to use!
* Implemented a prototype of search page. In addition to displaying the search results until there is nothing.
* Launched process (see man-page) picks up the settings from configuration files that are created manually or by using graphical interface on Qt or Gtk. The result: initiated downloads is continuing, users can access to your share and so on.

--- 2.0.3 2010-06-08 ---
* Fixed display of unread messages using the tray icon.
* Fixed potential problems with search using locales other than UTF-8. (Now kernel takes default encoding specified in the preferences rather than local ones, as it was before)
* Added graphical configuration of user commands in the Settings dialog. (In previous versions it was necessary to edit xml-config manually)
* Thanks to Dmytro Demenko the Ukrainian translation is now available.
* Thanks to Miroslav Petrovic the Serbian translation is now available.